style.css
* {
    margin: 0px;
    padding: 0px;
}

html {
    /* css variables */
    --illustration-bg: #D9D9D9;
    scroll-behavior: smooth;
}

.navbar {
    padding-inline: 8.375em; /* 134px */
    border-bottom: solid var(--illustration-bg);
}

/* bootstrap container */
.container-fluid {
    padding-inline: 8.375em;
}

/* meet the team */
.team-illustration-box {
    width: 18.75em; /* 300px */
    height: 18.75em; /* 300px */
    background-color: var(--illustration-bg);
}

.team-card-col {
    /* border: solid red; */
    width: 81.5625em;
    min-height: 55vh !important;
    overflow-y: scroll;
    white-space: nowrap;
}

.team-card {
    min-width: 18.75em; /* 300px */
    height: 25em; /* 400px */
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    border-radius: 20px;
    border-bottom: solid #D9D9D9;
    /* border-top: solid var(--illustration-bg); */
}

.person {
    --transform-speed: 250ms; 
    position: relative;
    max-width: 12rem;
    margin-inline: auto;
    margin-block: auto;
}

.person-container {
    aspect-ratio: 1 / 1.35;
    display: grid;
    align-items: end;
    border-radius: 0 0 100vw 100vw;
    overflow: hidden;
    transition: transform var(--transform-speed) ease-in-out;
}

.person-container:hover { /* circle scale up */
    transform: scale(1.1);
}

.person-img {
    position: relative;
    transition: transform calc(var(--transform-speed) * 1.2) ease;
}

/* Arish */
#person-img-1 {
    transform: scale(1.4);
    z-index: 2;
}

/* Dio */
#person-img-2 {
    z-index: 2;
    bottom: 10rem;
    top: 10rem;
    transform: scale(2.8);
}

/* Jj */
#person-img-3 {
    transform: scale(1.3);
}

/* Jason C */
#person-img-4 {
    transform: scale(2);
}

#person-container-1:hover #person-img-1 {
    transform: 
        scale(1.4)
        translateY(-1.5rem);
}

#person-container-2:hover #person-img-2 {
    transform: 
        scale(2.7)
        translateY(-1.1rem);
}

#person-container-3:hover #person-img-3 {
    transform: 
        scale(1.35)
        translateY(-1.5rem);
}

#person-container-4:hover #person-img-4 {
    transform: 
        scale(2)
        translateY(-1.1rem);
}

.person-circle {
    position: absolute;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    inset: auto 0 0;
    width: 100%;
    margin-inline: auto;
    border-radius: 50%;
}

.person-container img {
    max-width: 100%;
}

/* Landing Page*/
#landing-page{
    /* display: flex; */
    font-size: 30px;
}

#landing-page img{
    object-fit: cover;
    min-width: 500px;
}

.h-600{
    height: 600px;
}

.landing-info{
    display: flex;
    flex-direction: column;
}

.landing-info h1{
    margin-top: 5rem;
    margin-bottom: 4rem;
}

.landing-info p{
    text-align: justify;
}

.landing-info .logo{
    width: fit-content;
    margin-bottom: 1.5rem;
}

.sig-color{
    background-size:cover;
    background-image: linear-gradient(90deg, #EA4335 9.19%, #FFA647 15.84%, rgba(251, 188, 4, 0.83) 23.53%, #0F9D58 33.15%, #4285F4 48.75%, #7F56A2 70.65%);
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
}

@media screen and (max-width: 1050px){
    #landing-page{
        font-size: 16px;
    }

    .landing-info{
        align-items: center;
    }

    .landing-info *{
        text-align: center;
    }

    .landing-info h1{
        margin-bottom: 2rem;
    }
}

/* about page */
.about-info h1{
    font-size: 40px;
    font-weight: bold;
    text-align: left;
    color: #555555;
    text-shadow: -1px 2px 2px rgba(0,0,0, 0.2);
    margin-top: 5rem;
    margin-bottom: 2rem;
}

.about-info p{
    font-size: 30px;    
    width: 75%;
}

/* oval shape */
.oval {
    width: 18px;
    height: 13px;
    background-color: #EA4335;
    border-radius: 50%;
}
  
.oval1 {
    width: 26px;
    height: 16px;
    background-color: #FBBC04;
    border-radius: 50%;
}

.oval2 {
    width: 28px;
    height: 18px;
    background-color: #0F9D58;
    border-radius: 50%;
}

.oval3 {
    width: 34px;
    height: 22px;
    background-color: #4285F4;
    border-radius: 50%;
}

.oval4 {
    width: 42px;
    height: 25px;
    background-color: #EA4335;
    border-radius: 50%;
}

.oval5 {
    width: 53px;
    height: 26px;
    background-color: #FBBC04;
    border-radius: 50%;
}

.oval6 {
    width: 88px;
    height: 26px;
    background-color: #0F9D58;
    border-radius: 50%;
}

.oval7 {
    width: 128px;
    height: 26px;
    background-color: #4285F4;
    border-radius: 50%;
}

.oval, .oval1, .oval2, .oval3, .oval4, .oval5, .oval6, .oval7 {
    display: inline-block;
    margin-right: 10px;
    vertical-align: middle;
}

